--- a/portfolio-aro/wwwroot/index.html
+++ b/portfolio-aro/wwwroot/index.html
@@ -49,6 +49,11 @@
 
 
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+
+
+    <script>
+        document.getElementsByClassName("card-animes")[0].addEventListener("hover", () => { document.body.add("obscure") });
+    </script>
 </body>
 
 </html>
