--- a/portfolio-aro/wwwroot/index.html
+++ b/portfolio-aro/wwwroot/index.html
@@ -13,9 +13,15 @@
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+
 </head>
 
-<body>
+<body class="">
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
@@ -49,11 +55,8 @@
 
 
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
-
-    <script>
-        document.getElementsByClassName("card-animes")[0].addEventListener("hover", () => { document.body.add("obscure") });
-    </script>
 </body>
 
 </html>
